--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "expressportfolio",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./server.js"
+  },
+  "engines": {
+    "node": "^12.18.3",
+    "npm": "^6.0.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
@@ -16,5 +20,18 @@
     "jquery": "^3.6.0",
     "morgan": "~1.9.1",
     "popper.js": "^1.16.1"
-  }
+  },
+  "description": "Comp-229 Express Portfolio",
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mkaur791/Express_Portfolio_Site.git"
+  },
+  "author": "Manvir Kaur",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mkaur791/Express_Portfolio_Site/issues"
+  },
+  "homepage": "https://github.com/mkaur791/Express_Portfolio_Site#readme"
 }
