--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "bootstrap": "^5.1.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^11.0.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jquery": "^3.6.0",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.7.2",
     "popper.js": "^1.16.1"
   },
   "description": "Comp-229 Express Portfolio",
